[package]
name = "sena"
version = "0.1.1"
edition = "2021"
readme = "src/README.md"
license = "MIT"
description = "Library for composable event handlers"
authors = ["Nero <nerodono0@gmail.com>"]
keywords = ["chains", "events", "handling", "match", "router"]

repository = "https://github.com/nerodono/sena-rs"
homepage = "https://github.com/nerodono/sena-rs"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
either = { version = "1.11.0", default-features = false }
tokio = { version = "1.37.0", features = ["sync", "rt"], optional = true }

[dev-dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "sync"] }
