[package]
name = "sena"
version = "0.2.0"
edition = "2021"
readme = "src/README.md"
license = "MIT"
description = "Library for composable event handlers"
authors = ["Nero <nerodono0@gmail.com>"]
keywords = ["chains", "events", "handling", "match", "router"]

repository = "https://github.com/nerodono/sena-rs"
homepage = "https://github.com/nerodono/sena-rs"

[dependencies]
sena-macros = { version = "0.1.0", path = "./sena-macros" }

[dev-dependencies]
